# submaps_ros

./: .gitmodules  LICENSE  README.md
ros_submapping/: CMakeLists.txt  package.xml
ros_submapping/config/: config_realsense_D455_Tommaso.yaml  config_realsense_D455_depth_Tommaso.yaml  config_realsense_D455_s8_Tommaso.yaml  config_uhumans_Tommaso.yaml  config_uhumans_depth_Tommaso.yaml  config_visensor_Tommaso.yaml  config_visensor_depth_Tommaso.yaml
ros_submapping/include/: Planner.hpp  Publisher.hpp  SupereightInterface.hpp
ros_submapping/launch/: ros_submapping.launch
ros_submapping/src/: Planner.cpp  Publisher.cpp  SupereightInterface.cpp  main.cpp  waypoint_publisher.cpp
rotors_simulator/rotors_control/src/nodes/: lee_position_controller_node.cpp
rotors_simulator/rotors_description/urdf/: component_snippets.xacro  firefly.xacro  firefly_base.xacro  mav_with_vi_sensor.gazebo
rotors_simulator/rotors_gazebo/: package.xml
rotors_simulator/rotors_gazebo/launch/: all_world.launch  keyboard.launch  mav_hovering_example_with_vi_sensor.launch  mav_with_keyboard.launch  spawn_mav.launch  spawn_vi_sensor.launch
rotors_simulator/rotors_gazebo/models/floor/: model.sdf
rotors_simulator/rotors_gazebo/models/floor/materials/scripts/: asphalt.material
rotors_simulator/rotors_gazebo/models/garching_kitchen/: model.config  model.sdf
rotors_simulator/rotors_gazebo/models/garching_kitchen/temp/: garching_kitchen.dae
rotors_simulator/rotors_gazebo/models/kitchen_dining/: model.config  model.sdf
rotors_simulator/rotors_gazebo/models/my_walls/: model.config  model.sdf
rotors_simulator/rotors_gazebo/models/my_walls_1/: model.config  model.sdf
rotors_simulator/rotors_gazebo/models/my_walls_1/materials/scripts/: asphalt.material
rotors_simulator/rotors_gazebo/models/my_walls_2/: model.config  model.sdf
rotors_simulator/rotors_gazebo/models/my_walls_3/: model.config  model.sdf
rotors_simulator/rotors_gazebo/models/my_walls_3/materials/scripts/: pic_1.material  pic_2.material  pic_3.material  pic_4.material  pic_5.material  pic_6.material  pic_7.material  pic_8.material  pic_9.material
rotors_simulator/rotors_gazebo/models/rhino/: metadata.pbtxt  model.config  model.sdf
rotors_simulator/rotors_gazebo/models/rotors_description/urdf/: component_snippets.xacro
rotors_simulator/rotors_gazebo/models/turtle1/: metadata.pbtxt  model.config  model.sdf
rotors_simulator/rotors_gazebo/models/turtle2/: metadata.pbtxt  model.config  model.sdf
rotors_simulator/rotors_gazebo/models/turtle3/: metadata.pbtxt  model.config  model.sdf
rotors_simulator/rotors_gazebo/src/: waypoint_publisher.cpp
rotors_simulator/rotors_gazebo/worlds/: garching_kitchen.world  hospital.world  kitchen_dining.world  maze.world
rotors_simulator/rotors_gazebo_plugins/src/: gazebo_imu_plugin.cpp
rviz_rotors/: CMakeLists.txt  package.xml
rviz_rotors/meshes/: camera.stl
rviz_rotors/rviz/: config_1.rviz
rviz_submapping/: CMakeLists.txt  package.xml
rviz_submapping/rviz/: config_1.rviz
utils/: asl2rosbag.py
