<package format="2">
  <name>ros_submapping</name>
  <version>2.2.3</version>
  <description>The ros_submapping package</description>

  <maintainer email="t.rebeggiani@studenti.unina.it">Tommaso Rebeggiani</maintainer>

  <author>Tommaso Rebeggiani</author>
  <author>Dimos Tzoumanikas</author>

  <license>ASL 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_msgs</depend>
  <depend>gazebo_plugins</depend>
  <depend>geometry_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rotors_gazebo_plugins</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>dynamic_reconfigure</depend>

</package>
